--- a/Adidas_Sales_Data_Analysis.ipynb
+++ b/Adidas_Sales_Data_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAw4vcEW4md3kK88TkojKe",
+      "authorship_tag": "ABX9TyP0stxp5qm+t6dtZb8U3lOJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,44 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gargidutta0602/EDA-Projects/blob/main/Adidas_Sales_Data_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Adidas EDA and Sales Strategy\n",
+        "Analysis of sales data is essential to making strategic decisions in the dynamic retail market. This project's primary goal is to examine Adidas sales data in order to identify patterns, offer insightful commentary, and point out areas that might use improvement. Using Python and data analysis frameworks, the objective is to present a thorough study of Adidas' sales performance over a certain period of time."
+      ],
+      "metadata": {
+        "id": "eKKVb_jj8RLi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Description\n",
+        "\n",
+        "\n",
+        "1.   Retailer: The company or group that sells Adidas goods.\n",
+        "2.   Retailer ID: a unique number that each merchant is given\n",
+        "3.   Invoice Date: The date when the sales transaction occurred.\n",
+        "4.   Region: The store's operational geographic territory.\n",
+        "5.   State: The state within the region where the retailer is located.\n",
+        "6.   City: The retailer's location in the city.\n",
+        "7.   Product: The item for sale is an Adidas product.\n",
+        "8.   Price per Unit: The price of a single Adidas product unit.\n",
+        "9.   Units Sold: The amount of Adidas merchandise sold in a certain transaction, expressed in units.\n",
+        "10.  Total Sales: The amount of money made from the sale of Adidas goods in a certain transaction.\n",
+        "11.  Operating Profit: The amount of money made from the sale of Adidas goods in a certain transaction.\n",
+        "12.  Operating Margin: The proportion of operational profit to overall sales.\n",
+        "13.  Sales Method: The process used to carry out the sales transaction.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VrustdNs8VDl"
+      }
     },
     {
       "cell_type": "code",
